[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
include = [
    "lib/*.dll",
    "lib/*.so",
    "lib/*.dylib"
]

[project]
name = "ctypes_easytier_ffi"
authors = [{name = "dalong", email = "1141591465@qq.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
